# sky

./: pyproject.toml  readme.md   script.py
config/: settings.py  urls.py
sky_api/: apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
sky_api/management/commands/: sh.py
sky_api/migrations/: 0001_initial.py  0002_alter_temp_options_remove_city_x_remove_city_y_and_more.py  0002_city_owner_alter_city_name.py  0003_alter_city_latitude.py  0003_alter_city_name.py  0004_alter_city_name.py  0004_alter_temp_humidity_alter_temp_precipitation_and_more.py  0005_alter_city_name.py  0005_alter_temp_precipitation.py  0006_alter_temp_city.py  0007_alter_city_name_alter_temp_city.py  0008_remove_temp_press_temp_date_time_temp_humidity_and_more.py  0009_alter_temp_city.py
users_api/: models.py  permissions.py  serializers.py  urls.py  views.py
users_api/management/commands/: csu.py
users_api/migrations/: 0001_initial.py  0002_rename_strcity_subcity.py  0003_alter_subcity_city_alter_subcity_user.py  0004_delete_subcity.py
